# RAG

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  RAG.py  README.md  pyproject.toml  requirements.txt  setup.sh  start_backend.sh  start_frontend.sh  validate_setup.py
.github/workflows/: ci.yml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: document_processor.py  inngest_service.py  rag_service.py  vector_store.py
frontend/: app.py
